--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,86 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5;
+  background: #111;
+}
+
+/* scaffolding */
+
+.container {
+  width: 100%;
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 0 16px;
+  background: #eee;
+}
+
+/* typography */
+
+h1,
+h2,
+h3 {
+  font-weight: 300;
+  margin: 0 0 .5rem 0;
+  line-height: 1.1;
+}
+
+h1 {
+  font-size: 3.375rem;
+}
+
+h2 {
+  font-size: 2.25rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+/* forms */
+
+label {
+  display: block;
+  margin-bottom: .5rem;
+}
+
+input {
+  display: block;
+  width: 100%;
+  font-family: inherit;
+  font-size: 1rem;
+  line-height: 1;
+  font-weight: 400;
+  padding: 1rem .5rem;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+button {
+  border-radius: 4px;
+  background: green;
+  font-family: inherit;
+  border: 1px solid transparent;
+  font-weight: 400;
+  font-size: 1rem;
+  padding: 1rem .5rem;
+  color: #fff;
+  display: block;
+  width: 100%;
+  cursor: pointer;
+  margin-bottom: 1rem;
 }
