--- a/src/components/Signup/Signup.scss
+++ b/src/components/Signup/Signup.scss
@@ -3,11 +3,12 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  text-align: center;
 }
 
 .signup-container {
   width: 100%;
-  max-width: 480px;
+  max-width: 560px;
   padding: 16px;
   background: #eee;
 }
