--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -30,3 +30,25 @@ a {
     text-decoration: underline;
   }
 }
+
+table {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 1rem;
+  background-color: transparent;
+  border-collapse: collapse;
+}
+
+td,
+th {
+  padding: .75rem;
+  vertical-align: top;
+  border-top: 1px solid #eee;
+}
+
+th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #eee;
+  text-align: left;
+  font-weight: 700;
+}
