--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -32,23 +32,28 @@ a {
 }
 
 table {
+  border-collapse: collapse;
+}
+
+th {
+  text-align: inherit;
+}
+
+.table {
   width: 100%;
   max-width: 100%;
   margin-bottom: 1rem;
   background-color: transparent;
-  border-collapse: collapse;
-}
 
-td,
-th {
-  padding: .75rem;
-  vertical-align: top;
-  border-top: 1px solid #eee;
-}
+  td,
+  th {
+    padding: .75rem;
+    vertical-align: top;
+    border-top: 1px solid #dee2e6;
+  }
 
-th {
-  vertical-align: bottom;
-  border-bottom: 2px solid #eee;
-  text-align: left;
-  font-weight: 700;
+  thead th {
+    vertical-align: bottom;
+    border-bottom: 2px solid #dee2e6;
+  }
 }
