--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -3,11 +3,8 @@
 .button {
   border-radius: 4px;
   background: #666;
-  font-family: inherit;
   border: 1px solid transparent;
-  font-weight: 400;
-  font-size: 1rem;
-  padding: 1rem .5rem;
+  padding: .5rem 1rem;
   color: #fff;
   display: block;
   width: 100%;
