--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,5 +1,8 @@
+@import '../../styles/breakpoints';
+
 .sidebar {
   text-align: center;
+  flex: 0 0 10rem;
 
   .alien {
     max-width: 10rem;
@@ -8,9 +11,13 @@
 
 .sidebar-layout {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+
+  @include breakpoint(sm) {
+    flex-direction: row;
+  }
 
   .page-content {
-    flex: 1;
+    flex: 1 0 auto;
   }
 }
