--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -1,19 +1,25 @@
+input,
+select,
+button {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  font-weight: inherit;
+}
+
 label {
   display: block;
   margin-bottom: .5rem;
 }
 
-input,
-select {
+.input {
   display: block;
   width: 100%;
-  font-family: inherit;
-  font-size: 1rem;
-  line-height: 1;
-  font-weight: 400;
-  padding: 1rem .5rem;
+  padding: .5rem 1rem;
   border-radius: 4px;
   border: 1px solid #ccc;
+  color: #000;
+  margin: 0;
 }
 
 .form-input {
