--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -1,7 +1,7 @@
 @import '../../styles/breakpoints';
 
 .page-layout {
-  margin-top: 1rem;
+  padding-top: 16px;
   display: flex;
 
   &--sidebar {
@@ -14,6 +14,5 @@
 }
 
 .page-content {
-  flex: 1 0 auto;
-  margin-left: 1rem;
+  flex: 1;
 }
